2010-07-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/binding*.lisp: Bind control+g to escape the current action
	like emacs.

	* src/clfswm-internal.lisp
	(delete-child-and-children-in-all-frames): New function and
	binding: Second mode - Control+Delete delete the current child and
	its children in all frames (ie: close the current child and its
	children).

2010-07-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (remove-child-in-frame): Do not destroy
	the frame window and the frame gc. Close a very annoying bug when
	cuting/pasting a frame or moving a child over frames with the
	mouse.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Redisplay
	all children in *current-root* after moving/resizing a frame.

2010-07-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (delete-focus-window)
	(destroy-focus-window): Remove child in parent frame before
	stopping it.

2010-07-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (identify-key): Add a timeout in
	xlib:process-event.
	(mouse-click-to-focus-generic): Use find-child-under-mouse instead
	of the window passed by xlib:process-event.

	* src/xlib-util.lisp (move-window, resize-window)
	(wait-mouse-button-release): Add a timeout in xlib:process-event.

2010-04-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (run-other-window-manager): Add the ability
	to launch an other window manager and to return to clfswm.

2010-03-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-tile-space-layout): Set default
	to 1%.

2009-12-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-loop): Add a *loop-hook* parameter and a
	loop timeout.

	* src/clfswm-generic-mode.lisp (generic-mode): Add a loop-hook
	parameter and a loop timeout.

2009-12-05  Philippe Brochard  <pbrochard@common-lisp.net>
